# speech-service

./: .env.dist  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: development.yml  stage.yml
docker/: Dockerfile.lint
kubernetes/stage/: deployment.yml
src/: main.py  publisher.py  recognizer.py  s3.py  schemas.py  sentry.py  services.py  settings.py  subscriber.py
